Finished Part 1 of Circle Blast

--- a/235/Circle-Blast/HW-pixi-game-start/HW-pixi-game-start/game.html
+++ b/235/Circle-Blast/HW-pixi-game-start/HW-pixi-game-start/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>Circle Blast!</title>
 	<style>
 	body
@@ -12,8 +12,8 @@
 </head>
 <body>
 	<!-- External libraries -->
-	<script src="https://github.com/pixijs/pixi.js?utm_source=html5weekly"></script>
-	<script src="https://github.com/goldfire/howler.js"></script>
+	<script src="https://pixijs.download/release/pixi.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 
 	<!-- My JS files -->
 	<script src="js/main.js"></script>
